# Curation

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.config.web.ts
.github/workflows/: release.yml
docs/: data-architecture.md  setup.md
docs/design/: chat-and-agent-integration.md
docs/superpowers/plans/: 2026-04-21-local-first-wiring.md
docs/superpowers/specs/: 2026-04-21-local-first-wiring-design.md
server/: .env.example  auth.py  cleaner.py  database.py  requirements.txt  seed_tencent.py  server.py  test_cleaner.py  test_utils_minimal.py  utils.py  verify_wechat_discovery.py
server/routers/: auth_router.py  invite_router.py  users_router.py
src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: article-viewer.json  default.json
src-tauri/src/: acp.rs  chat_commands.rs  commands.rs  db.rs  lib.rs  main.rs  mcp_server.rs  sync.rs
src/components/: AcpRunningDot.tsx  AddArticleModal.tsx  AddMenu.tsx  AdminAnnotationFlag.tsx  AdminManagementPanel.tsx  AdminPane.tsx  AggregationQueuePanel.tsx  AnalysisQueuePanel.tsx  ArticleAdminPanel.tsx  ArticleCard.tsx  ArticleDrawer.tsx  ArticleFeed.tsx  ArticleList.tsx  ArticlePreviewDrawer.tsx  ArticleQueuePanel.tsx  ArticleReader.tsx  AuthCallback.tsx  BizDrawer.tsx  CardFrame.tsx  CardReader.tsx  CardVoteBar.tsx  ChatInput.tsx  ChatMessages.tsx  FavoriteButton.tsx  FavoritesReader.tsx  FileViewer.tsx  FlagModal.tsx  InboxList.tsx  InviteManagementPanel.tsx  LoginScreen.tsx  ReaderPane.tsx  RunDetailDrawer.tsx  RunProgress.tsx  SearchList.tsx  Settings.tsx  SettingsDrawer.tsx  Sidebar.tsx  SourceManager.tsx  SubscribeModal.tsx  UserDrawer.tsx  (+1 more)
src/components/platform/: TauriOnly.tsx
src/hooks/: useAccounts.ts  useAppearance.ts  useArticles.ts  useBizArticles.ts  useCards.ts  useChat.ts  useDiscoverableAccounts.ts  useFavorites.ts  useFeedback.ts  useInbox.ts  useLayout.ts  useSearch.ts  useSync.ts
src/lib/: api.ts  appearance.ts  authStore.tsx  authing.ts  cache.ts  chat.ts  markdown.tsx
src/styles/: tokens.css
(+15 files in other folders)
