[package]
name = "curation"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Curation"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "curation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
pbkdf2 = "0.12"
sha2 = "0.10"
hex = "0.4"
keyring = "3"
chrono = "0.4"
agent-client-protocol = "0.11"
agent-client-protocol-tokio = "0.11"
agent-client-protocol-rmcp = "0.11"
rmcp = { version = "0.1", features = ["server", "transport-io"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "rt"] }

